Change ledger entries to signed amounts
